--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngrx/effects": "^15.4.0",
     "@ngrx/store": "^15.4.0",
     "@ngrx/store-devtools": "^15.4.0",
+    "@taiga-ui/addon-mobile": "^3.24.0",
     "@taiga-ui/cdk": "^3.24.0",
     "@taiga-ui/core": "^3.24.0",
     "@taiga-ui/icons": "^3.24.0",
