fix: allow CommonJS modules used by Taiga UI

--- a/angular.json
+++ b/angular.json
@@ -39,7 +39,8 @@
               "src/taiga-global.less",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "allowedCommonJsDependencies": ["text-mask-core", "dompurify"]
           },
           "configurations": {
             "production": {
