--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,9 @@
       "files": ["*.ts"],
       "extends": [
         "eslint:recommended",
+        "plugin:import/recommended",
         "plugin:@typescript-eslint/recommended",
+        "plugin:import/typescript",
         "plugin:@angular-eslint/recommended",
         "plugin:@angular-eslint/template/process-inline-templates",
         "plugin:@ngrx/strict-requiring-type-checking",
@@ -29,6 +31,13 @@
             "style": "kebab-case"
           }
         ]
+      },
+      "settings": {
+        "import/extensions": [".js", ".ts"],
+        "import/resolver": {
+          "typescript": true,
+          "node": true
+        }
       }
     },
     {
