--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,7 @@
             "styles": [
               "node_modules/@taiga-ui/core/styles/taiga-ui-theme.less",
               "node_modules/@taiga-ui/core/styles/taiga-ui-fonts.less",
+              "src/taiga-global.less",
               "src/styles.scss"
             ],
             "scripts": []
