--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@taiga-ui/core": "^3.24.0",
     "@taiga-ui/icons": "^3.24.0",
     "@taiga-ui/kit": "^3.24.0",
+    "@taiga-ui/styles": "^3.25.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
