--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,7 @@
             ],
             "styles": ["src/taiga-global.less", "src/styles.scss"],
             "scripts": [],
-            "allowedCommonJsDependencies": ["text-mask-core", "dompurify"]
+            "allowedCommonJsDependencies": ["text-mask-core", "dompurify", "irregular-plurals"]
           },
           "configurations": {
             "production": {
@@ -59,7 +59,13 @@
               "vendorChunk": true,
               "extractLicenses": false,
               "sourceMap": true,
-              "namedChunks": true
+              "namedChunks": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
