--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@taiga-ui/kit": "^3.24.0",
     "@taiga-ui/styles": "^3.25.0",
     "@tinkoff/ng-dompurify": "^4.0.0",
+    "plur": "^5.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
