--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ngrx/store": "^15.4.0",
     "@ngrx/store-devtools": "^15.4.0",
     "@taiga-ui/addon-mobile": "^3.24.0",
+    "@taiga-ui/addon-table": "^3.25.0",
     "@taiga-ui/cdk": "^3.24.0",
     "@taiga-ui/core": "^3.24.0",
     "@taiga-ui/icons": "^3.24.0",
