fix: add 'curly' rule to ESLint to enforce curly braces around blocks

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
         "prettier"
       ],
       "rules": {
+        "curly": ["error", "all"],
         "@angular-eslint/directive-selector": [
           "error",
           {
