fix: fix @store path alias in tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
       "@flight-search/*": ["./src/app/flight-search/*"],
       "@booking/*": ["./src/app/booking/*"],
       "@shared/*": ["./src/app/shared/*"],
-      "@store/*": ["./src/app/store"],
+      "@store/*": ["./src/app/store/*"],
       "@user/*": ["./src/app/user/*"]
     }
   },
