--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@taiga-ui/kit": "3.24.0",
     "@taiga-ui/styles": "3.24.0",
     "@tinkoff/ng-dompurify": "^4.0.0",
+    "nanoid": "^4.0.2",
     "plur": "^5.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
